Added scroll action for header so that it hides/shows when scrolling.
* In css/header.css:

    - Added hamburger icon that will change to X when clicked.

* In css/home.css:

    - Removed "margin-left" on Google Play badge.

* In html/header.html:

    - Added "id" to div with "navbar" class.

    - Added hamburger icon but commented the code because it is
      incomplete for now.

* Resized images/google-play-badge.png

* Resized images/new_customize.png

* Resized images/new_home_expanded.png

* In index.html:

    - Added new javascript files.

* Added js/hamburgerIconOnClick.js:

    - This will handle changing the hamburger icon when clicked.

* Added js/showHideHeaderOnScroll.js:

    - This will handle showing/hiding the header when scrolling.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="./js/includehtml.js"></script>
     <script src="./js/appShowcase.js"></script>
+    <script src="./js/showHideHeaderOnScroll.js"></script>
+    <script src="./js/hamburgerIconOnClick.js"></script>
 
     <!-- Includes -->
     <script>includeHtml("#header", "./html/header.html");</script>
