--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 <!-- Header -->
 <!----------------------------------------------------------------------------->
 
-<div class="navbar">
+<div id="navbar" class="navbar">
   <div class="navhome">
   </div>
 
@@ -12,5 +12,14 @@
     <a href="#about">About</a>
 		-->
     <a href="#donate">Donate</a>
+
+		<!--
+		<div class="hamburger" onclick="myFunction(this)">
+			<div class="bar1"></div>
+			<div class="bar2"></div>
+			<div class="bar3"></div>
+		</div>
+		-->
+
   </div>
 </div>
