Reorganized structure of code so that it is by feature instead of by type.
* Clicking on the hamburger icon now moves everything to the left and
  shows a side navigation bar.

--- a/home/home.html
+++ b/home/home.html
@@ -25,13 +25,13 @@
 
 			<!-- Google Play badge -->
 			<a href="https://play.google.com/store/apps/details?id=com.nfcalarmclock">
-				<img id="google-play" src="../images/google-play-badge.png" alt="Google Play badge">
+				<img id="google-play" src="../home/img/google-play-badge.png" alt="Google Play badge">
 			</a>
 		</div>
 
 		<!-- Picture -->
     <div>
-			<img id="app-showcase" src="../images/new_home.png" alt="Main app">
+			<img id="app-showcase" src="../home/img/new_home.png" alt="Main app">
     </div>
   </div>
 
