Updated to good working version of the website.
* Now using bootstrap locally, instead of from the web. Not sure how
  good this is but we will see.

* TODO:

    - Minify code

    - Make pngs smaller or convert to webp.

    - Make Features section better by using a carousel maybe.

    - Add README.md so that I remember that the lib/ directory is
      ignored and contains npm install of boostrap.

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,17 +1,28 @@
-<!----------------------------------------------------------------------------->
-<!-- Footer -->
-<!----------------------------------------------------------------------------->
+<!-- Align items -->
+<div id="footer-container" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 
-<ul>
+	<!-- Left side -->
+	<div class="col-md-4 d-flex align-items-center">
 
-  <!-- Github -->
-  <li>
-    <a href="http://github.com/gabeg805/NFC-Alarm-Clock/" role="button">
-      <i class="fa fa-github"></i>
-    </a>
-  </li>
+		<!-- App icon and name -->
+		<a class="navbar-brand d-flex align-items-center" href="#">
+			<img class="app-icon-and-name" src="../favicon.ico" alt="App icon">
+			NFC Alarm Clock
+		</a>
 
-</ul>
+	</div>
 
-<!-- Note -->
-<p>Last Updated 24 Sep 2023.</p>
+	<!--- Right side -->
+	<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+
+		<!-- Github -->
+		<li>
+			<a href="http://github.com/gabeg805/NFC-Alarm-Clock/" role="button">
+				<i class="fa fa-github"></i>
+			</a>
+		</li>
+
+	</ul>
+
+</div>
+
