Fixed issues where forgot to load Bootstrap javascript.
* In index.html:

    - Fixed typo when specifying "container" class for Contact. Forgot a
      double quote.

* In donate/donate.css:

    - Removed border around Coindrop button.

* In intro/intro.css:

    - Removed media query to increase the size of the Google Play icon.
      Will keep it the same regardless of screen size.

* In main/:

    - Renamed common.css to helper.css since it just has helper classes.

    - Updated defaults.scss to include default tag information and
      different settings for different screen sizes.

    - Removed navbar settings in defaults.scss

* In navbar/:

    - Moved default navbar settings to navbar.scss

    - Updated navbar so that when the hamburger icon shows up, the
      dropdown menu shows up. Also, the active item will not have a
      border around it. Instead, it will be filled in.

* Removed unused icon and javascript files.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 
 		<title>NFC Alarm Clock by Gabe Gonzalez</title>
 
-		<!-- External links -->
+		<!-- External CSS -->
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
-		<!-- External scripts -->
-		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-
-		<!-- CSS -->
+		<!-- My CSS -->
 		<link href="./main/defaults.css"     rel="stylesheet" type="text/css">
-		<link href="./main/common.css"       rel="stylesheet" type="text/css">
+		<link href="./main/helper.css"       rel="stylesheet" type="text/css">
 		<link href="./navbar/navbar.css"     rel="stylesheet" type="text/css">
 		<link href="./footer/footer.css"     rel="stylesheet" type="text/css">
 		<link href="./intro/intro.css"       rel="stylesheet" type="text/css">
@@ -24,7 +21,11 @@
 		<link href="./contact/contact.css"   rel="stylesheet" type="text/css">
 		<link href="./donate/donate.css"     rel="stylesheet" type="text/css">
 
-		<!-- Javascript -->
+		<!-- External javascript -->
+		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+		<script src="../lib/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+		<!-- My javascript -->
 		<script src="./main/includehtml.js"></script>
 
 		<!-- Includes -->
@@ -52,7 +53,7 @@
 		<div class="my-divider"></div>
 
 		<!-- Contact -->
-		<section id="contact" class=container"></section>
+		<section id="contact" class="container"></section>
 		<div class="my-divider"></div>
 
 		<!-- Donate -->
