Fixed pathing to Bootstrap modules.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<!-- External javascript -->
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-		<script src="../lib/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="./lib/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 		<!-- My javascript -->
 		<script src="./main/includehtml.js"></script>
