Website in good place, many things are completed.
* Updated Features section so that the elements are in their proper
  place and the carousel works as expected.

  - Now using a .scss file to compute proper spacing of the carousel
    indicators and next/prev buttons.

* Moved html file contents to the index.html file so that would no
  longer need to depend on JQuery to load the html files.

* Now using a Github icon instead of relying on the FontAwesome font
  which could make the website take longer to load.

* Removed dependence on JQuery.

* Changed dependence on Bootstrap so that it is using local files
  instead of the CDN files.

* Converted pngs to webp files.

* Fixed spacing.

* Added more comments.

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -14,13 +14,13 @@
 
 		<!-- Email -->
 		<div class="form-group">
-			<label class="form-label" for="exampleInputEmail1">Email address</label>
-			<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Your email address">
+			<label class="form-label" for="exampleInputEmail">Email address</label>
+			<input type="email" class="form-control" id="exampleInputEmail" placeholder="Your email address">
 		</div>
 
 		<!-- Message -->
 		<div class="form-group">
-			<label class="form-label" for="exampleInputEmail1">Message</label>
+			<label class="form-label" for="exampleInputMessage">Message</label>
 			<textarea class="form-control" rows="5" placeholder="Type your message..."></textarea>
 		</div>
 
@@ -29,4 +29,4 @@
 
 	</form>
 
-</div>
+</div> <!-- V/H centered -->
