--- a/features/features.html
+++ b/features/features.html
@@ -11,83 +11,56 @@
 		look exactly like you want it!
 	</p>
 
-	<!-- Main screen -->
-	<h2>Main screen</h2>
-	<p>
-		This is the main screen of the app, where you'll be able to see all
-		your alarms.
-	</p>
+	<div id="carouselExampleCaptions" class="carousel slide">
 
-	<img class="feature-img" src="../features/img/main_screen.png" alt="Main screen">
+		<!-- Indicator buttons -->
+		<div class="carousel-indicators">
+			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		</div>
 
-	<!-- Expand alarm -->
-	<h2>Expand alarm</h2>
-	<p>
-		Click on an alarm to expand it.
-	</p>
+		<div class="carousel-inner">
 
-	<img class="feature-img" src="../features/img/main_screen_expanded.png" alt="Expanded alarm">
+			<div class="carousel-item active">
+				<img src="..." class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>First slide label</h5>
+					<p>Some representative placeholder content for the first slide.</p>
+				</div>
+			</div>
 
-	<!-- Alarm options -->
-	<h2>Alarm options</h2>
-	<p>
-		Click on this button to tweak different alarm options.
-	</p>
+			<div class="carousel-item">
+				<img src="..." class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>Second slide label</h5>
+					<p>Some representative placeholder content for the second slide.</p>
+				</div>
+			</div>
 
-	<img class="feature-img" src="../features/img/main_screen_alarm_options.png" alt="Alarm options">
+			<div class="carousel-item">
+				<img src="..." class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+					<h5>Third slide label</h5>
+					<p>Some representative placeholder content for the third slide.</p>
+				</div>
+			</div>
 
-	<!-- Settings -->
-	<h2>Main Settings</h2>
-	<p>
-		This is the Settings screen where you can access all the different
-		in-app settings.
-	</p>
+		</div>
 
-	<img class="feature-img" src="../features/img/settings.png" alt="In-app settings">
+		<!-- Previous button -->
+		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</button>
 
-	<!-- General -->
-	<h2>General settings</h2>
-	<p>
-		Set default alarm settings like when to automatically dismiss an alarm,
-		how long to snooze for, etc.
-	</p>
+		<!-- Next button -->
+		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</button>
 
-	<img class="feature-img" src="../features/img/settings_general.png" alt="General settings">
+	</div>
 
-	<!-- Appearance -->
-	<h2>Appearance</h2>
-	<p>
-		Change the appearance of the app such as the different colors to use,
-		the style of the day buttns, and more.
-	</p>
-
-	<img class="feature-img" src="../features/img/settings_appearance_colors.png" alt="Appearance settings to tweak colors">
-
-	<!-- Statistics -->
-	<h2>Statistics</h2>
-	<p>
-		View statistics such as how many alarms you've dismissed, how long
-		you've snoozed for, and more.
-	</p>
-
-	<img class="feature-img" src="../features/img/settings_statistics.png" alt="Statistics settings">
-
-	<!-- About -->
-	<h2>About</h2>
-	<p>
-		See who developed the app (Me!), the current version of the app you are
-		using, and a description of all the permissions the app you can use.
-	</p>
-
-	<img class="feature-img" src="../features/img/settings_about.png" alt="Main screen">
-
-	<!-- Support development -->
-	<h2>Support development</h2>
-	<p>
-		If you'd like to support developement of the app, you can click on
-		this, but this is totally optional.  No matter what, this app will
-		always be free and have no ads!
-	</p>
-
-</div>
+</div> <!-- V/H centered -->
 
