--- a/footer/footer.html
+++ b/footer/footer.html
@@ -17,12 +17,12 @@
 
 		<!-- Github -->
 		<li>
-			<a href="http://github.com/gabeg805/NFC-Alarm-Clock/" role="button">
-				<i class="fa fa-github"></i>
+			<a href="http://github.com/gabeg805/NFC-Alarm-Clock/" class="github-icon" role="button" aria-label="Github repository">
+				<img src="../footer/img/github-mark.svg" alt="Github">
 			</a>
 		</li>
 
 	</ul>
 
-</div>
+</div> <!-- Footer container -->
 
