Reorganized code so that hopefully, things make a little more sense.
* Reorganized code so that:

    - Everything in the home page is in its own directory.

    - Anything that is shared, such as the navbar and footer, are in
      their own directories.

    - Any libraries are in their own directory.

    - And core functionality is in its own directory. Perhaps the navbar
      and footer can be in core? I'll have to think if this makes sense
      or not.

* Added home/contact.js:

    - This file will handle emailing to AWS.

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,28 +1,33 @@
-<!-- Align items -->
-<div id="footer-container" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+		<!-- Footer -->
+		<footer id="footer" class="container">
 
-	<!-- Left side -->
-	<div class="col-md-4 d-flex align-items-center">
+			<!-- Align items -->
+			<div id="footer-container" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
 
-		<!-- App icon and name -->
-		<a class="navbar-brand d-flex align-items-center" href="#">
-			<img class="app-icon-and-name" src="../favicon.ico" alt="App icon">
-			NFC Alarm Clock
-		</a>
+				<!-- Left side -->
+				<div class="col-md-4 d-flex align-items-center">
 
-	</div>
+					<!-- App icon and name -->
+					<a class="navbar-brand d-flex align-items-center" href="#">
+						<img class="app-icon-and-name" src="../favicon.ico" width=36" height="36" alt="App icon">
+						NFC Alarm Clock
+					</a>
 
-	<!--- Right side -->
-	<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+				</div>
 
-		<!-- Github -->
-		<li>
-			<a href="http://github.com/gabeg805/NFC-Alarm-Clock/" class="github-icon" role="button" aria-label="Github repository">
-				<img src="../footer/img/github-mark.svg" alt="Github">
-			</a>
-		</li>
+				<!--- Right side -->
+				<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
 
-	</ul>
+					<!-- Github -->
+					<li>
+						<a href="http://github.com/gabeg805/NFC-Alarm-Clock/" class="github-icon" role="button" aria-label="Github repository">
+							<img src="../footer/img/github-mark.svg" width="28" height="28" alt="Github">
+						</a>
+					</li>
 
-</div> <!-- Footer container -->
+				</ul>
+
+			</div> <!-- Footer container -->
+
+		</footer>
 
