--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -1,28 +1,33 @@
-<!-- Container -->
-<div class="container">
+		<!-- Navbar -->
+		<nav id="header" class="navbar navbar-expand-lg bg-body-tertiary">
 
-	<!-- Brand icon and title-->
-	<a class="navbar-brand d-flex align-items-center" href="#">
-		<img class="app-icon-and-name" src="../favicon.ico" alt="App icon">
-		NFC Alarm Clock
-	</a>
+			<!-- Container -->
+			<div class="container">
 
-	<!-- Hamburger icon for when the navbar has no more space -->
-	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+				<!-- Brand icon and title-->
+				<a class="navbar-brand d-flex align-items-center" href="#">
+					<img class="app-icon-and-name" src="../favicon.ico" width=36" height="36" alt="App icon">
+					NFC Alarm Clock
+				</a>
 
-	<!-- Collapsable part of the navbar when there is no more space -->
-	<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<!-- Hamburger icon for when the navbar has no more space -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-		<!-- Navbar items  -->
-		<div class="navbar-nav nav-pills">
-			<a class="nav-link active" aria-current="page" href="#">Home</a>
-			<a class="nav-link" href="#features">Features</a>
-			<a class="nav-link" href="#contact">Contact</a>
-			<a class="nav-link" href="#donate">Donate</a>
-		</ul>
+				<!-- Collapsable part of the navbar when there is no more space -->
+				<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 
-	</div> <!-- Collapsable navbar items -->
-</div> <!-- Container -->
+					<!-- Navbar items  -->
+					<div class="navbar-nav nav-pills">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link" href="#features">Features</a>
+						<a class="nav-link" href="#contact">Contact</a>
+						<a class="nav-link" href="#donate">Donate</a>
+					</ul>
+
+				</div> <!-- Collapsable navbar items -->
+			</div> <!-- Container -->
+
+		</nav>
 
