--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 		<title>NFC Alarm Clock by Gabe Gonzalez</title>
 
 		<!-- My CSS -->
-		<link href="./main/defaults.css"     rel="stylesheet" type="text/css">
-		<link href="./navbar/navbar.css"     rel="stylesheet" type="text/css">
-		<link href="./intro/intro.css"       rel="stylesheet" type="text/css">
-		<link href="./features/features.css" rel="stylesheet" type="text/css">
-		<link href="./contact/contact.css"   rel="stylesheet" type="text/css">
-		<link href="./footer/footer.css"     rel="stylesheet" type="text/css">
-		<link href="./donate/donate.css"     rel="stylesheet" type="text/css">
+		<link href="./core/defaults.css" rel="stylesheet" type="text/css">
+		<link href="./navbar/navbar.css" rel="stylesheet" type="text/css">
+		<link href="./footer/footer.css" rel="stylesheet" type="text/css">
+		<link href="./home/intro.css"    rel="stylesheet" type="text/css">
+		<link href="./home/features.css" rel="stylesheet" type="text/css">
+		<link href="./home/contact.css"  rel="stylesheet" type="text/css">
+		<link href="./home/donate.css"   rel="stylesheet" type="text/css">
+
+		<!-- My javascript -->
+		<script src="../home/contact.js"></script>
 
 	</head>
 
@@ -89,7 +92,7 @@
 
 					<!-- Google Play badge -->
 					<a id="google-play" href="https://play.google.com/store/apps/details?id=com.nfcalarmclock">
-						<img src="../intro/img/google-play-badge.png" width="150" height="45" alt="Google Play badge">
+						<img src="../home/img/google-play-badge.png" width="150" height="45" alt="Google Play badge">
 					</a>
 
 				</div> <!-- V/H center at max height -->
@@ -122,7 +125,7 @@
 
 						<!-- Main screen -->
 						<div class="carousel-item active">
-							<img src="../features/img/main_screen.webp" class="d-block feature-img mx-auto" fetchpriority="high" loading="lazy" alt="Main screen">
+							<img src="../home/img/main_screen.webp" class="d-block feature-img mx-auto" fetchpriority="high" loading="lazy" alt="Main screen">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Main screen</h5>
 								<p>
@@ -134,7 +137,7 @@
 
 						<!-- Expand alarm -->
 						<div class="carousel-item">
-							<img src="../features/img/main_screen_expanded.webp" class="d-block feature-img mx-auto" fetchpriority="high" loading="lazy" alt="Expanded alarm">
+							<img src="../home/img/main_screen_expanded.webp" class="d-block feature-img mx-auto" fetchpriority="high" loading="lazy" alt="Expanded alarm">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Expand alarm</h5>
 								<p>
@@ -145,7 +148,7 @@
 
 						<!-- Alarm options -->
 						<div class="carousel-item">
-							<img src="../features/img/main_screen_alarm_options.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Alarm options">
+							<img src="../home/img/main_screen_alarm_options.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Alarm options">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Alarm options</h5>
 								<p>
@@ -156,7 +159,7 @@
 
 						<!-- Settings -->
 						<div class="carousel-item">
-							<img src="../features/img/settings.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="In-app settings">
+							<img src="../home/img/settings.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="In-app settings">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Main Settings</h5>
 								<p>
@@ -168,7 +171,7 @@
 
 						<!-- General -->
 						<div class="carousel-item">
-							<img src="../features/img/settings_general.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="General settings">
+							<img src="../home/img/settings_general.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="General settings">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>General settings</h5>
 								<p>
@@ -180,7 +183,7 @@
 
 						<!-- Appearance -->
 						<div class="carousel-item">
-							<img src="../features/img/settings_appearance_colors.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Appearance settings to tweak colors">
+							<img src="../home/img/settings_appearance_colors.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Appearance settings to tweak colors">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Appearance</h5>
 								<p>
@@ -192,7 +195,7 @@
 
 						<!-- Statistics -->
 						<div class="carousel-item">
-							<img src="../features/img/settings_statistics.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Statistics settings">
+							<img src="../home/img/settings_statistics.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Statistics settings">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>Statistics</h5>
 								<p>
@@ -204,7 +207,7 @@
 
 						<!-- About -->
 						<div class="carousel-item">
-							<img src="../features/img/settings_about.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Main screen">
+							<img src="../home/img/settings_about.webp" class="d-block feature-img mx-auto" fetchpriority="low" loading="lazy" alt="Main screen">
 							<div class="carousel-caption d-none d-md-block">
 								<h5>About</h5>
 								<p>
@@ -272,18 +275,24 @@
 
 					<!-- Email -->
 					<div class="form-group">
-						<label class="form-label" for="exampleInputEmail">Email address</label>
-						<input type="email" class="form-control" id="exampleInputEmail" placeholder="Your email address">
+						<label class="form-label" for="userEmail">Email address</label>
+						<input id="userEmail" class="form-control" type="email" placeholder="Your email address">
+						<div class="invalid-feedback">Please enter a valid email address</div>
 					</div>
 
 					<!-- Message -->
 					<div class="form-group">
-						<label class="form-label" for="exampleInputMessage">Message</label>
-						<textarea class="form-control" rows="5" placeholder="Type your message..."></textarea>
+						<label class="form-label" for="userMessage">Message</label>
+						<textarea id="userMessage" class="form-control" rows="5" placeholder="Type your message..."></textarea>
+						<div class="invalid-feedback">Please enter a message</div>
 					</div>
 
 					<!-- Send button -->
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button class="btn btn-primary" type="submit" onclick="sendEmailToAwsApi(event)">Submit</button>
+					<!--
+					Add a thing here to indicate whether contact was made or not
+					<div></div>
+					-->
 
 				</form>
 
@@ -323,7 +332,7 @@
 				<!-- Coindrop -->
 				<div class="donation-site">
 					<a id="coindrop-btn" class="btn btn-warning" href="https://coindrop.to/nfcalarmclock" role="button">
-						<img src="../donate/img/coindrop-icon.png" width="39" height="39" alt="🐖">
+						<img src="../home/img/coindrop-icon.png" width="39" height="39" alt="🐖">
 						Coindrop
 					</a>
 				</div>
