Got scrollspy to work!
* In index.html:

    - Added scrollspy to "body" tag.

    - Changed "navbar-nav" to "ul" tag and changed children of this to
      be "li" tags with an "a" child.

* In core/defaults.scss:

    - Needed to change "body" tag to have a relative position.

* In navbar/navbar.scss:

    - Added selector so that if a nav-link is in focus, but is NOT
      active, then change its color back to white. Before this change,
      its color would have been the primary color, which is no good
      because only the active element should be that color.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</head>
 
 	<!-- Body -->
-	<body>
+	<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-smooth-scroll="true">
 
 		<!-- Navbar -->
 		<nav id="header" class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
@@ -45,19 +45,24 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 
 					<!-- Navbar items  -->
-					<div class="navbar-nav nav-pills">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-						<a class="nav-link" href="#features">Features</a>
-						<a class="nav-link" href="#contact">Contact</a>
-						<a class="nav-link" href="#donate">Donate</a>
+					<ul class="navbar-nav nav-pills">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#intro">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#features">Features</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#donate">Donate</a>
+						</li>
 					</ul>
 
 				</div> <!-- Collapsable navbar items -->
 			</div> <!-- Container -->
 		</nav> <!-- Navbar -->
-
-		<!-- TODO: Scroll spy to make navbar item active -->
-		<div data-spy="scroll" data-target="#header" data-offset="0">
 
 		<!-- Introduction -->
 		<main class="h-100">
@@ -383,7 +388,6 @@
 			</div> <!-- Footer container -->
 
 		</footer>
-		</div>
 
 		<!-- External javascript -->
 		<script defer src="./lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
