--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 					</div> <!-- Inner -->
 
 					<!-- Previous button -->
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" aria-label="Previous feature">
+					<button class="carousel-control-prev" type="button" onclick="this.blur();" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" aria-label="Previous feature">
 						<span class="fa-stack" aria-hidden="true">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-arrow-left fa-stack-1x fa-inverse"></i>
@@ -236,7 +236,7 @@
 					</button>
 
 					<!-- Next button -->
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" aria-label="Next feature">
+					<button class="carousel-control-next" type="button" onclick="this.blur();" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" aria-label="Next feature">
 						<span class="fa-stack" aria-hidden="true">
 							<i class="fa fa-circle fa-stack-2x"></i>
 							<i class="fa fa-arrow-right fa-stack-1x fa-inverse"></i>
